Fixes an issue raised in #443 related to invalid casts being performed in RollupCalculator

--- a/rollup/core/classes/RollupCalculator.cls
+++ b/rollup/core/classes/RollupCalculator.cls
@@ -515,7 +515,9 @@ public without sharing abstract class RollupCalculator {
 
     public virtual override void setDefaultValues(String lookupRecordKey, Object priorVal) {
       super.setDefaultValues(lookupRecordKey, priorVal);
-      this.returnDecimal = (Decimal) this.returnVal;
+      if (this.returnVal instanceof Decimal) {
+        this.returnDecimal = (Decimal) this.returnVal;
+      }
     }
 
     protected virtual Decimal getDecimalOrDefault(Object potentiallyUnitializedDecimal) {
@@ -871,7 +873,9 @@ public without sharing abstract class RollupCalculator {
 
     public virtual override void setDefaultValues(String lookupRecordKey, Object priorVal) {
       super.setDefaultValues(lookupRecordKey, isConcatDistinct(this.op) ? '' : priorVal);
-      this.stringVal = (String) this.returnVal;
+      if (this.returnVal instanceof String) {
+        this.stringVal = (String) this.returnVal;
+      }
     }
 
     protected override void setReturnValue() {
