--- a/rollup/core/classes/RollupCalcItemReplacer.cls
+++ b/rollup/core/classes/RollupCalcItemReplacer.cls
@@ -135,7 +135,10 @@ public without sharing class RollupCalcItemReplacer {
     if (calcItems.isEmpty()) {
       return calcItems;
     }
-    Map<Id, SObject> idToCalcItem = new Map<Id, SObject>(calcItems);
+    Map<Id, SObject> idToCalcItem = new Map<Id, SObject>();
+    for (SObject calcItem : calcItems) {
+      idToCalcItem.put(calcItem.Id, calcItem);
+    }
     Set<String> baseFields = this.baseQueryFields.get(calcItems[0].getSObjectType());
     if (baseFields?.isEmpty() == false) {
       SObject firstItem = calcItems[0];
